2010-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/z80.src/inst.cc (inst_add): moved add_HL_Word to z80mac.h,
	  (inst_daa, inst_scf, inst_ccf, inst_sub): fixed flags
	  (inst_jp): fixed JP PO/PE
	* sim/ucsim/z80.src/inst_ed.cc (inst_ed): fixed flags
	* sim/ucsim/z80.src/inst_xd.cc (inst_Xd_add): moved add_IX_Word to z80mac.h
	* sim/ucsim/z80.src/instcl.h: cosmetics
	* sim/ucsim/z80.src/z80.cc (print_regs): print N flag
	* sim/ucsim/z80.src/z80mac.h: fixed flags
	* src/z80/gen.c (genIfxJump): simplified
	  (genCmp): fixed bug 1757671
	* device/include/stdbool.h: __SDCC_WEIRD_BOOL==2 for hc08/pic14/pic16
	* support/regression/tests/bool.c: run test only once,
	  run half the cases for __bit
	* support/regression/tests/bug1757671.c: new, added

2010-08-07 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c,
	  support/regression/tests/bool.c:
	  Fixed #3040914.

2010-08-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h: added E_INCOMPLETE_FIELD
	* src/SDCCsymt.c (checkStructFlexArray, compStructSize): fixed bug 1518279

2010-08-05 Borut Razem <borut.razem AT siol.net>

	* device/include/mcs51at89S8252.h, device/include/mcs51/at89c55.h,
	  device/include/mcs51/at89x51.h, sdcc/device/include/mcs51/at89x52.h,
	  device/include/mcs51/ser.h, device/lib/_ser.c:
	  sdcc library license changed to GPL+LE

2010-08-04 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdlex.cc: regenerated,
	  fix for patch #3038644: Fix for GCC-4.4 compile error
	* device/include/z80/z180.h, device/include/hc08/mc68hc908apxx.h,
	  sdcc/device/include/hc08/mc68hc908jkjl.h:
	  sdcc library license changed to GPL+LE

2010-08-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCmpGt, genCmpLt),
	* src/mcs51/gen.c (genCmpGt, genCmpLt): fixed bug 1994062 part 1
	  (genCmp): use optimization from bug 1994062
	* src/SDCCast.c (decorateType '['):  fixed bug 1994062 part 2
	* src/SDCCset.c: cosmetic changes